# clearn

./: CMakeLists.txt  my_include_file.c
1.QuickStart/: 02.data_type_char.c  03.data_type_float.c  04.variable.c  05.constant.c  06.operators.c  07.condition  07.condition.c  08.loop.c  09.guess_num.c
2.Function/: 01.function_bsic.c  04.varargs.c
9.Strings/: 1.character_type.c  2.conversion.c
QuickStart/: 01.data_type_int.c  02.data_type_char  02.data_type_char.c  03.data_type_float  04.variable  06.operators  06.operators.c
include/: factorial.h  io_utils.h
src/: factorial.c
